--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,16 @@
   font-family: sans-serif;
   text-align: center;
   border: 1px solid black;
+  width: 800px;
+  height: 500px;
 }
 
 .mainPic {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .mainContent {
+
 }
